# Code-to-Animation

./: ANIMATION_SPEC.md  BUG_ANALYSIS.md  CMakeLists.txt  LOGIC_GUIDE.md  README.md  electron-builder.json  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js
src/core/CodeParser/: ASTVisitor.h  HeaderMapper.cpp
src/core/Runtime/: InstrumentationPass.cpp  StateTracker.h
src/core/Visualization/: Animator.cpp  SceneGraph.h
src/main/: app.ts  main.js
src/parser/: CPP14Lexer.g4  CPP14Parser.g4  CppParser.ts  Lexer.test.ts  antlr4-patch.d.ts
src/preload/: CppAnalyzer.ts  preload.d.ts  preload.js
src/renderer/: SceneManager.ts  index.html  index.ts
src/ui/: ControlsPanel.cpp  GLWidget.h  MainWindow.cpp
